# vibe-local

./: .gitignore  CONTRIBUTING.md  README.md  config.yaml  pyproject.toml  requirements.txt  run.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
vibe_local/: __init__.py  __main__.py  audio.py  config.py  history.py  hotkeys.py  input_sim.py  llm.py  main.py  transcribe.py  tray_qt.py
