[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibe-local"
version = "0.1.0"
description = "Local voice-to-text with AI rewriting - a local Vibe Typer alternative"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name"}
]
dependencies = [
    "faster-whisper>=1.0.0",
    "ollama>=0.3.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "pystray>=0.19.0",
    "Pillow>=10.0.0",
    "pynput>=1.7.0",
    "pyperclip>=1.8.0",
    "PyYAML>=6.0",
]

[project.scripts]
vibe-local = "vibe_local.main:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]

[tool.setuptools.packages.find]
include = ["vibe_local*"]
